# logion-app

./: .gitignore  .pre-commit-config.yaml  .vale.ini  404.html  CITATION.cff  LICENSE  README.md  deploy-site.yml  index.html  logion-mac-test.def  logion.def  mkdocs.yml  model_config.yaml  noxfile.py  pre-commit-config.yaml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: build-and-pkg.yml  build-app.yml  build-backend-executables.yml  build-container.yml  build-electron-app.yml  deploy-site.yml  publish-docs.yml
_index/: index.html
app-electron/backend/: main.py  requirements.txt
app-electron/electron-app/: package-lock.json
app-electron/frontend/: package-lock.json
app/backend/: include.py
app/frontend/: package.json
credits/: index.html
docs/: credits.md  hardware.md  how.md  index.md
docs/explainers/: _index.md  ccr.md  lev-dist.md
docs/how/: detection.md  prediction.md
docs/how-to/: detection.md  install.md  prediction.md
docs/user-guide/: _index.md  detection.md  install.md  prediction.md
explainers/_index/: index.html
explainers/ccr/: index.html
explainers/lev-dist/: index.html
hardware/: index.html
how/: index.html
how-to/detection/: index.html
how-to/install/: index.html
how-to/prediction/: index.html
how/detection/: index.html
how/prediction/: index.html
search/: search_index.json
src/: package-lock.json
src/Logion.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/backend/: include.py  main.py  main.spec  resources_config.yaml  sys-info.py  urls.yaml
src/frontend/: package-lock.json  package.json
src/logion.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/resources/: resources_config.yaml
tests/: test_detect.py  test_logion_class.py  test_model_loader.py  test_predict.py  test_predict_unit.py
user-guide/_index/: index.html
user-guide/detection/: index.html
user-guide/install/: index.html
user-guide/prediction/: index.html
(+80 files in other folders)
